Estructura completa GameZone Chile: 5 páginas HTML + CSS profesional con Grid, Flexbox, animaciones y responsive design

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GameZone Chile - Tienda de Videojuegos</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -14,11 +14,11 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#productos">Productos</a></li>
-            <li><a href="#consolas">Consolas</a></li>
-            <li><a href="#accesorios">Accesorios</a></li>
-            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="consolas.html">Consolas</a></li>
+            <li><a href="accesorios.html">Accesorios</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
     <main>
@@ -46,110 +46,10 @@
                     <strong>Xbox Series X</strong>
                     <p>La consola más potente de Microsoft. Disfruta de Game Pass y cientos de juegos en 4K.</p>
                 </li>
-                <li>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/FIFA_logo.svg" alt="FIFA 24" width="100" height="40">
-                    <strong>FIFA 24</strong>
-                    <p>El juego de fútbol más popular en Chile. Compite con tus amigos y lleva a tu equipo favorito a la gloria.</p>
-                </li>
             </ul>
-        </section>
-
-        <section id="consolas">
-            <h2>Consolas</h2>
-            <p>Descubre nuestra amplia gama de consolas de videojuegos, desde las últimas generaciones hasta las más clásicas.</p>
-            <ul>
-                <li>
-                    <strong>PlayStation 5 Standard</strong>
-                    <p>Consola next-gen con lector de discos Blu-ray. Precio: $649.990</p>
-                </li>
-                <li>
-                    <strong>PlayStation 5 Digital Edition</strong>
-                    <p>Versión completamente digital de la PS5. Precio: $549.990</p>
-                </li>
-                <li>
-                    <strong>Xbox Series X</strong>
-                    <p>La consola más potente de Microsoft con 4K nativo. Precio: $599.990</p>
-                </li>
-                <li>
-                    <strong>Xbox Series S</strong>
-                    <p>Consola compacta y digital para gaming en 1440p. Precio: $399.990</p>
-                </li>
-                <li>
-                    <strong>Nintendo Switch OLED</strong>
-                    <p>La versión mejorada con pantalla OLED de 7 pulgadas. Precio: $459.990</p>
-                </li>
-                <li>
-                    <strong>Nintendo Switch Lite</strong>
-                    <p>Versión portátil y económica de la Switch. Precio: $249.990</p>
-                </li>
-            </ul>
-        </section>
-
-        <section id="accesorios">
-            <h2>Accesorios Gaming</h2>
-            <p>Completa tu setup gaming con los mejores accesorios del mercado. Desde controles hasta auriculares profesionales.</p>
-            <ul>
-                <li>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/1/15/Video_game_controller_icon.png" alt="Control DualSense" width="100" height="40">
-                    <strong>Control DualSense PS5</strong>
-                    <p>Control inalámbrico oficial de PlayStation 5 con retroalimentación háptica y gatillos adaptativos. Precio: $79.990</p>
-                </li>
-                <li>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/1/15/Video_game_controller_icon.png" alt="Auriculares Gaming" width="100" height="40">
-                    <strong>Auriculares HyperX Cloud II</strong>
-                    <p>Auriculares gaming profesionales con sonido envolvente 7.1 y micrófono extraíble. Precio: $129.990</p>
-                </li>
-                <li>
-                    <strong>Teclado Mecánico Razer BlackWidow V3</strong>
-                    <p>Teclado mecánico gaming con switches Razer Green e iluminación RGB. Precio: $159.990</p>
-                </li>
-                <li>
-                    <strong>Mouse Gaming Logitech G502 Hero</strong>
-                    <p>Mouse gaming de alta precisión con sensor de 25,600 DPI. Precio: $89.990</p>
-                </li>
-                <li>
-                    <strong>Silla Gamer DXRacer Formula</strong>
-                    <p>Silla ergonómica para sesiones de gaming prolongadas. Precio: $299.990</p>
-                </li>
-                <li>
-                    <strong>Webcam Logitech C920 HD Pro</strong>
-                    <p>Cámara web Full HD 1080p para streaming y videollamadas. Precio: $119.990</p>
-                </li>
-            </ul>
-        </section>
-
-        <section id="contacto">
-            <h2>Contacto</h2>
-            <p>¡Visítanos en nuestra tienda física o contáctanos por cualquiera de nuestros canales!</p>
-            
-            <h3>Información de la Tienda</h3>
-            <p><strong>Dirección:</strong> Av. Providencia 1234, Providencia, Santiago, Chile</p>
-            <p><strong>Teléfono:</strong> +56 2 2345 6789</p>
-            <p><strong>Email:</strong> <a href="mailto:contacto@gamezonechile.cl">contacto@gamezonechile.cl</a></p>
-            <p><strong>Horarios de atención:</strong></p>
-            <ul>
-                <li>Lunes a Viernes: 10:00 - 20:00 hrs</li>
-                <li>Sábados: 10:00 - 18:00 hrs</li>
-                <li>Domingos: 11:00 - 17:00 hrs</li>
-            </ul>
-            
-            <h3>Síguenos en Redes Sociales</h3>
-            <ul>
-                <li><a href="https://www.facebook.com/gamezonechile" target="_blank" rel="noopener">Facebook: @GameZoneChile</a></li>
-                <li><a href="https://www.instagram.com/gamezonechile" target="_blank" rel="noopener">Instagram: @gamezonechile</a></li>
-                <li><a href="https://www.twitter.com/gamezonechile" target="_blank" rel="noopener">Twitter: @GameZoneChile</a></li>
-            </ul>
-        </section>
-
-        <section>
-            <h3>Categorías de Productos</h3>
-            <ul>
-                <li>Consolas de nueva generación</li>
-                <li>Juegos físicos y digitales</li>
-                <li>Accesorios gaming</li>
-                <li>Tarjetas de regalo</li>
-                <li>Merchandise y coleccionables</li>
-            </ul>
+            <div class="ver-mas-container">
+                <a href="productos.html" class="btn-ver-mas">Ver todos los productos</a>
+            </div>
         </section>
     </main>
     <footer>
